Fixed misalignment of header/footer with body

--- a/style-responsive.css
+++ b/style-responsive.css
@@ -1,4 +1,6 @@
 @media (min-width: 1200px) {
+	.row-border-bottom-top {margin-left:30px;}
+	
 	#header .search-form #s { width: 71% !important; }
 	
 	#header-menu li#menu-item-76 { margin-left: 297px; }
